--- a/app/src/main/res/layout/activity_album_photo_select.xml
+++ b/app/src/main/res/layout/activity_album_photo_select.xml
@@ -6,8 +6,97 @@
     android:orientation="vertical">
 
     <!-- 标题栏 -->
+    <RelativeLayout
+        android:id="@+id/title_bar_rl"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
 
-    <include layout="@layout/layout_title_bar" />
+        android:background="#ff5859">
+
+        <LinearLayout
+            android:id="@+id/left_btn_ll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/back_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="6dp"
+                android:paddingLeft="6dp"
+                android:background="@drawable/btn_20_back_w_nor"
+                android:textColor="@color/title_text_color" />
+            <TextView
+                android:id="@+id/back_tv"
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="返回"/>
+
+
+            <Button
+                android:id="@+id/camera_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="6dp"
+                android:background="@drawable/film_camera"
+                android:textColor="@color/title_text_color"
+                android:visibility="gone" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/title_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="贴纸列表"
+                android:textColor="@color/white"
+                android:textSize="@dimen/dimens_20dp" />
+            <ImageView
+                android:id="@+id/iv_icon"
+                android:paddingLeft="3dp"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/right_btn_ll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:orientation="horizontal">
+
+            <Button
+                android:background="#ff5859"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:id="@+id/right_btn"
+                android:layout_marginRight="10dp"
+                android:textColor="@color/white"
+                android:textSize="@dimen/activity_title_size" />
+        </LinearLayout>
+
+    </RelativeLayout>
+
+    <!--<include layout="@layout/layout_title_bar" />-->
 
     <FrameLayout
         android:layout_width="match_parent"
