--- a/app/src/main/res/layout/activity_photo_editor_dynamic.xml
+++ b/app/src/main/res/layout/activity_photo_editor_dynamic.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:auto="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/color_c8c7c5"
@@ -80,14 +81,17 @@
         android:layout_alignParentBottom="true"
         android:background="#252525"
         android:orientation="vertical">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/id_recyclerview_horizontal"
+
+        <com.sunnybear.library.view.recycler.BasicRecyclerView
+            android:id="@+id/rv_articlesdetail_applyusers"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="55dp"
             android:layout_centerVertical="true"
             android:visibility="visible"
-            android:background="#FF0000"
-            android:scrollbars="none" />
+            auto:divider_width="5dp"
+            auto:has_rank_divider="true"
+            auto:layout_mode="horizontal" />
+
 
         <HorizontalScrollView
             android:id="@+id/scroll_sticker"
