--- a/app/src/main/res/layout/activity_photo_editor_dynamic.xml
+++ b/app/src/main/res/layout/activity_photo_editor_dynamic.xml
@@ -100,7 +100,7 @@
             auto:layout_mode="horizontal" />
 
 
-        <HorizontalScrollView
+       <!-- <HorizontalScrollView
             android:id="@+id/scroll_sticker"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -114,7 +114,7 @@
                 android:orientation="horizontal">
             </LinearLayout>
 
-        </HorizontalScrollView>
+        </HorizontalScrollView>-->
 
 
     </LinearLayout>
