--- a/app/src/main/res/layout/activity_dynamic_pic_item.xml
+++ b/app/src/main/res/layout/activity_dynamic_pic_item.xml
@@ -29,9 +29,9 @@
         android:layout_height="30dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:paddingBottom="10dp"
-        android:paddingRight="10dp"
+        android:paddingBottom="3dp"
+        android:paddingRight="3dp"
         android:src="@drawable/btn_22_02"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
 </RelativeLayout>
