--- a/app/src/main/res/layout/activity_collage.xml
+++ b/app/src/main/res/layout/activity_collage.xml
@@ -1,156 +1,166 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/img_blur_bg"
-    android:orientation="vertical"
     tools:context="com.putao.camera.collage.CollageActivity">
 
-
-    <RelativeLayout
-        android:id="@+id/title_bar_rl"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#00000000">
-
-        <Button
-            android:id="@+id/back_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_margin="6dp"
-            android:background="@drawable/selector_back_btn" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:orientation="horizontal">
-
-
-        </LinearLayout>
-        <TextView
-            android:id="@+id/tv_save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:text="保存/分享"
-            android:paddingRight="8dp"
-            android:textColor="@color/white"
-            android:textSize="@dimen/activity_title_size" />
-
-
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
-
-        <com.putao.camera.collage.view.CollageView
-            android:id="@+id/collage_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true" />
-
-
-    </RelativeLayout>
-
     <LinearLayout
-
-        android:id="@+id/ll_change_make"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:gravity="center"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
+
         <RelativeLayout
-            android:paddingTop="15dp"
-            android:paddingBottom="5dp"
-            android:layout_margin="@dimen/dimens_5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/iv_change_make"
+            android:id="@+id/title_bar_rl"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#00000000">
+
+            <Button
+                android:id="@+id/back_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/icon_capture_20_36"/>
+                android:layout_alignParentLeft="true"
+                android:layout_margin="6dp"
+                android:background="@drawable/selector_back_btn" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:orientation="horizontal">
+
+
+            </LinearLayout>
 
             <TextView
-                android:paddingLeft="10dp"
-                android:layout_toRightOf="@+id/iv_change_make"
+                android:id="@+id/tv_save"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:paddingRight="8dp"
+                android:text="保存/分享"
                 android:textColor="@color/white"
-                android:text="更换模板"/>
+                android:textSize="@dimen/activity_title_size" />
 
 
         </RelativeLayout>
 
-        <!-- <LinearLayout
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:gravity="right"
-             android:orientation="vertical"
-             android:paddingRight="30dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
 
-             <Button
-                 android:id="@+id/btn_fold"
-                 android:layout_width="wrap_content"
+            <com.putao.camera.collage.view.CollageView
+                android:id="@+id/collage_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true" />
+
+
+        </RelativeLayout>
+
+        <LinearLayout
+
+            android:id="@+id/ll_change_make"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/dimens_5dp"
+                android:paddingBottom="5dp"
+                android:paddingTop="15dp">
+
+                <ImageView
+                    android:id="@+id/iv_change_make"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/icon_capture_20_36" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/iv_change_make"
+                    android:paddingLeft="10dp"
+                    android:text="更换模板"
+                    android:textColor="@color/white" />
+
+
+            </RelativeLayout>
+
+            <!-- <LinearLayout
+                 android:layout_width="match_parent"
                  android:layout_height="wrap_content"
-                 android:background="@drawable/template_button_fold" />
-         </LinearLayout>-->
+                 android:gravity="right"
+                 android:orientation="vertical"
+                 android:paddingRight="30dp">
 
-        <!-- <LinearLayout
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:background="@color/white"
-             android:gravity="center"
-             android:orientation="horizontal">
+                 <Button
+                     android:id="@+id/btn_fold"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:background="@drawable/template_button_fold" />
+             </LinearLayout>-->
 
-             <com.putao.camera.editor.view.MyTextView
-                 android:id="@+id/btn_new_res"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_marginLeft="10dp"
-                 android:layout_marginRight="@dimen/dimens_10dp"
-                 android:background="@color/transparent"
-                 android:drawableTop="@drawable/res_download_icon"
-                 android:gravity="center_horizontal"
-                 android:text="更 多"
-                 android:textColor="@color/grey_dark"
-                 android:textSize="16sp" />
-
-             <HorizontalScrollView
-                 android:id="@+id/sl_sample_list"
+            <!-- <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@color/white"
-                 android:scrollbars="none">
+                 android:gravity="center"
+                 android:orientation="horizontal">
 
-                 <LinearLayout
-                     android:id="@+id/cur_cate_samples"
+                 <com.putao.camera.editor.view.MyTextView
+                     android:id="@+id/btn_new_res"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
-                     android:orientation="horizontal"
-                     android:paddingBottom="10dp"
-                     android:paddingLeft="10dp"
-                     android:paddingRight="10dp"
-                     android:paddingTop="10dp">
+                     android:layout_marginLeft="10dp"
+                     android:layout_marginRight="@dimen/dimens_10dp"
+                     android:background="@color/transparent"
+                     android:drawableTop="@drawable/res_download_icon"
+                     android:gravity="center_horizontal"
+                     android:text="更 多"
+                     android:textColor="@color/grey_dark"
+                     android:textSize="16sp" />
 
-                 </LinearLayout>
+                 <HorizontalScrollView
+                     android:id="@+id/sl_sample_list"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:background="@color/white"
+                     android:scrollbars="none">
 
-             </HorizontalScrollView>
-         </LinearLayout>-->
+                     <LinearLayout
+                         android:id="@+id/cur_cate_samples"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:orientation="horizontal"
+                         android:paddingBottom="10dp"
+                         android:paddingLeft="10dp"
+                         android:paddingRight="10dp"
+                         android:paddingTop="10dp">
+
+                     </LinearLayout>
+
+                 </HorizontalScrollView>
+             </LinearLayout>-->
 
 
-
-
+        </LinearLayout>
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/tips"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/img_tips_fullscreen02"
+        android:visibility="gone" />
 
-</LinearLayout>
+</RelativeLayout>
