--- a/app/src/main/res/layout/activity_dynamic_pic_item.xml
+++ b/app/src/main/res/layout/activity_dynamic_pic_item.xml
@@ -25,13 +25,13 @@
         android:visibility="visible" />
     <ProgressBar
         android:id="@+id/pb_download"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:paddingBottom="3dp"
-        android:paddingRight="3dp"
-        android:src="@drawable/btn_22_02"
+        android:layout_marginBottom="3dp"
+        android:layout_marginRight="3dp"
+        android:background="@drawable/btn_22_02"
         android:visibility="visible" />
 
 </RelativeLayout>
