--- a/app/src/main/res/layout/layout_collage_image_opreate_dialog.xml
+++ b/app/src/main/res/layout/layout_collage_image_opreate_dialog.xml
@@ -2,11 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/flash_switch_bg"
+    android:background="@color/black"
     android:gravity="center"
     android:orientation="horizontal">
 
     <LinearLayout
+        android:id="@+id/ll_replace"
+        android:paddingTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dimens_20dp"
@@ -15,11 +17,12 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btn_replace"
+        <ImageView
+
+            android:id="@+id/iv_replace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/temp_changeimg" />
+            android:src="@drawable/icon_capture_20_35" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -28,12 +31,14 @@
             android:textColor="@color/text_color_dark_898989" />
     </LinearLayout>
 
-    <View
+   <!-- <View
         android:layout_width="1dp"
         android:layout_height="match_parent"
-        android:background="@color/color_bfbfbf"></View>
+        android:background="@color/color_bfbfbf"></View>-->
 
     <LinearLayout
+        android:id="@+id/ll_rotate"
+        android:paddingTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dimens_20dp"
@@ -42,11 +47,35 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btn_mirror"
+        <ImageView
+            android:id="@+id/iv_rotate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/temp_mirror" />
+            android:src="@drawable/icon_capture_20_31" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="旋转"
+            android:textColor="@color/text_color_dark_898989" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_mirror"
+        android:paddingTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dimens_20dp"
+        android:layout_marginRight="@dimen/dimens_20dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/iv_mirror"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon_capture_20_32" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -54,6 +83,5 @@
             android:text="翻转"
             android:textColor="@color/text_color_dark_898989" />
     </LinearLayout>
-
 
 </LinearLayout>
