--- a/app/src/main/res/layout/activity_photo_select.xml
+++ b/app/src/main/res/layout/activity_photo_select.xml
@@ -183,7 +183,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="45dp"
                     android:background="#000000"
                     android:orientation="horizontal"
                     android:paddingLeft="10dp"
@@ -200,13 +200,41 @@
                         android:textSize="16sp" />
 
                    <!-- style="@style/button.red"-->
-                    <Button
+                    <LinearLayout
+                        android:id="@+id/ll_ok"
+                        android:background="#eb5350"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent">
+                        <TextView
+                            android:id="@+id/sum"
+                            android:layout_marginLeft="10dp"
+                            android:background="@color/white"
+                            android:gravity="center"
+                            android:paddingLeft="3dp"
+                            android:paddingRight="3dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0"/>
+                        <TextView
+                            android:layout_marginRight="10dp"
+                            android:paddingLeft="8dp"
+                            android:gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:textColor="@color/white"
+                            android:textSize="18sp"
+                            android:text="下一步"/>
+
+
+                    </LinearLayout>
+
+                   <!-- <Button
                         android:id="@+id/btn_ok"
                         style="@style/button.red"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:background="@drawable/background_view_grey"
-                        android:text="下一步" />
+                        android:text="下一步" />-->
 
 
                 </LinearLayout>
